--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .custom-card-title {
-  font-size: 5vw;
+  font-size: 6vw;
   color: white;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
@@ -50,6 +50,16 @@ body {
 
 .custom-bullet-text {
   font-size: 1.5vw;
+}
+
+.btn {
+  font-weight: bold;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+}
+
+.btn:hover {
+  transform: scale(1.05);
 }
 
 @media (max-width: 768px) {
