--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,13 @@ body {
   transform: scale(1.05);
 }
 
+.footer {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+}
+
 @media (max-width: 768px) {
   .icon {
     width: 75px;
